# cancer_prediction_rjs271

./: pyproject.toml  requirements.txt
.github/workflows/: build-and-publish.yml
cancer_prediction/: cancer_model.py  streamlit_app.py
models/: cancer_model_v2.pkl
tests/: test_CancerModel.py
workflows/: tests.yml
