[tool.poetry]
name = "cancer-prediction"
version = "0.1.0"
description = "A basic model to predict cancerous tumors based on certain properties."
authors = ["Rachel Sippy <8432003+rsippy@users.noreply.github.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "2.2.1"
scikit-learn = "1.4.1.post1"
matplotlib = "3.8.3"
numpy = "1.26.4"
typer = "0.9.0"
streamlit = "^1.33.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
